--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                default_target_path: admin
                 csrf_token_generator: security.csrf.token_manager
             logout:
                 path: logout
