--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "symfony/dotenv": "^4.0",
-        "symfony/maker-bundle": "^1.2"
+        "symfony/maker-bundle": "^1.2",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
